// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Room #createQueue filters out currentTrack if any 1`] = `
Array [
  Object {
    "name": "first",
    "spotifyUri": "12",
    "user": Object {
      "id": "1337",
      "lastPlay": 1505865600000,
    },
  },
  Object {
    "name": "second",
    "spotifyUri": "13",
    "user": Object {
      "id": "1338",
      "lastPlay": 1505865600001,
    },
  },
  Object {
    "name": "third",
    "spotifyUri": "11",
    "user": Object {
      "id": "1337",
      "lastPlay": 1505865600000,
    },
  },
]
`;

exports[`Room #createQueue returns a weaved queue 1`] = `
Array [
  Object {
    "name": "first",
    "user": Object {
      "id": "1337",
      "lastPlay": 1505865600000,
    },
  },
  Object {
    "name": "second",
    "user": Object {
      "id": "1338",
      "lastPlay": 1505865600001,
    },
  },
  Object {
    "name": "third",
    "user": Object {
      "id": "1337",
      "lastPlay": 1505865600000,
    },
  },
]
`;

exports[`Room #join pushes a new user 1`] = `
Array [
  Object {
    "email": "cookie@monster.com",
  },
]
`;

exports[`Room #queueTrack adds the track to userSongs 1`] = `
Object {
  "1337": Array [
    Object {
      "name": "test",
      "user": "1337",
    },
  ],
}
`;

exports[`Room #queueTrack queues a track 1`] = `
Array [
  Object {
    "name": "test",
    "spotifyUri": "2",
    "user": Object {
      "id": "1337",
      "lastPlay": 1,
    },
  },
]
`;

exports[`Room can create a Room 1`] = `
Room {
  "currentTrack": null,
  "id": "1",
  "name": "test",
  "queue": Array [],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;
